samples/_failures_safe/1760958621_03f171_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fdc864f8.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_fdc864f8.c:159:13: error: expected expression at end of input
  159 |             if (right < 0 && left > INT_MAX +
      |             ^~
./samples/SAFE/__tmp_fdc864f8.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fdc864f8.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fdc864f8.c:159:13: error: expected declaration or statement at end of input
